End of practice

--- a/html/1/index.html
+++ b/html/1/index.html
@@ -51,5 +51,6 @@
         <br><br>
     </div>
     <h2><a href="#top">Back to Top</a></h2>
+    <script src="../../javascript/practice.js"></script>
 </body>
 </html>
